# scenic-route

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  biome.json  firestore.rules  images.d.ts  next.config.js  next.config.ts  package.json  tsconfig.json
.cache/: gthc-hcne.ca49ca719abf308a.json
app/: globals.css  layout.tsx  page.tsx
components/: about-dialog.tsx  canopy-layer.tsx  clock-control.tsx  dining-layer.tsx  follow-toggle.tsx  genus-gl-layer.tsx  genus-layer.tsx  layers-control.tsx  lines-layer.tsx  location-field.tsx  log-here-button.tsx  logger-map.tsx  logger-search.tsx  logger-toolbar.tsx  logger.tsx  login.tsx  map-app.tsx  map-icons.ts  map.tsx  pin-editor.tsx  poi-layer.tsx  route-layer.tsx  route-panel.tsx  route-toggle.tsx  shade-layer.tsx  sign-in-dialog.tsx  street-score-layer.tsx  theme-provider.tsx  theme-toggle.tsx  toolbar.tsx  tree-cover-layer.tsx  tree-dots-layer.tsx  tree-legend.tsx  tree-toggle.tsx  use-hash-flag.ts
crates/tiler/: Cargo.toml
crates/tiler/src/: binfmt.rs  canopy.rs  chunks.rs  conflate.rs  corners.rs  densities.rs  genus.rs  genus_field.rs  geometry.rs  graph.rs  kde.rs  main.rs  manifest.rs  raster.rs  scenic.rs  shade.rs  sidewalks.rs  tiles.rs
data/: README.md
scripts/: README.md  art.ts  build-commercial.ts  build-shade.ts  build-street-tiles.ts  build-tree-data.ts  buildings.ts  cache.ts  canopy.ts  dining.ts  ferries.ts  geometry.ts  gtfs.ts  highways.ts  land-filter.ts  land.ts  landmarks.ts  landuse.ts  manifest.ts  openstreets.ts  overpass.ts  set-admin.ts  shade-schedule.ts  socrata.ts  (+1 more)
(+34 files in other folders)
