[package]
name = "tiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
png = "0.18"
rand = { version = "0.9", default-features = false }
rand_chacha = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
